feat(metrics): 实现治理指标收集与Prometheus集成
- 新增治理信号收集器 GovernanceMetricsCollector，记录限流、熔断等治理事件
- 在 ResilienceGovernanceFilter 和 ThreadIsolationGovernanceFilter 中埋点采集治理信号
- 添加治理指标API端点 `/lings/governance/all` 返回汇总与版本明细
- 实现 Micrometer 桥接，自动注册健康与治理指标到 MeterRegistry
- 更新文档说明 Prometheus 集成方式与指标含义
- 完善仪表盘前端展示治理信号卡片与版本对比
- 示例应用添加 actuator 和 micrometer-registry-prometheus 依赖