@@ -1,11 +1,14 @@
 package com.lingframe.dashboard.controller;
 
 import com.lingframe.core.config.LingFrameConfig;
+import com.lingframe.core.metrics.GovernanceMetricsCollector;
+import com.lingframe.core.metrics.GovernanceMetricsSnapshot;
 import com.lingframe.core.metrics.MetricsCollector;
 import com.lingframe.core.metrics.MetricsSnapshot;
 import com.lingframe.core.spi.LeakRiskLevel;
 import com.lingframe.dashboard.dto.ApiResponse;
 import com.lingframe.dashboard.dto.LeakRiskReportDTO;
+import com.lingframe.dashboard.dto.LingGovernanceMetricsViewDTO;
 import com.lingframe.dashboard.dto.LingHealthViewDTO;
 import com.lingframe.dashboard.dto.LingUninstallResultDTO;
 import com.lingframe.dashboard.service.DashboardService;
@@ -32,8 +35,9 @@ class LingControllerTest {
     void uninstallShouldReturnStructuredPrecheckResult() {
         DashboardService dashboardService = mock(DashboardService.class);
         MetricsCollector metricsCollector = mock(MetricsCollector.class);
+        GovernanceMetricsCollector governanceMetricsCollector = mock(GovernanceMetricsCollector.class);
         LingFrameConfig config = mock(LingFrameConfig.class);
-        LingController controller = new LingController(config, dashboardService, metricsCollector, false);
+        LingController controller = new LingController(config, dashboardService, metricsCollector, governanceMetricsCollector, false);
 
         LingUninstallResultDTO dto = LingUninstallResultDTO.builder()
                 .lingId("ling1")
@@ -61,8 +65,9 @@ class LingControllerTest {
     void getAllLingHealthShouldReturnSummaryAndVersions() {
         DashboardService dashboardService = mock(DashboardService.class);
         MetricsCollector metricsCollector = mock(MetricsCollector.class);
+        GovernanceMetricsCollector governanceMetricsCollector = mock(GovernanceMetricsCollector.class);
         LingFrameConfig config = mock(LingFrameConfig.class);
-        LingController controller = new LingController(config, dashboardService, metricsCollector, false);
+        LingController controller = new LingController(config, dashboardService, metricsCollector, governanceMetricsCollector, false);
 
         MetricsSnapshot summary = new MetricsSnapshot();
         summary.setLingId("ling1");
@@ -83,7 +88,7 @@ class LingControllerTest {
         versions.put("1.0.0", stable);
         versions.put("1.1.0", canary);
 
-        when(metricsCollector.getAllSnapshots()).thenReturn(List.of(summary));
+        when(metricsCollector.getAllSnapshots()).thenReturn(Collections.singletonList(summary));
         when(metricsCollector.getVersionSnapshots("ling1")).thenReturn(versions);
 
         ApiResponse<Map<String, LingHealthViewDTO>> response = controller.getAllLingHealth();
@@ -96,5 +101,45 @@ class LingControllerTest {
         assertEquals(MetricsSnapshot.HealthStatus.WARNING, dto.getSummary().getHealthStatus());
         assertEquals(2, dto.getVersions().size());
         assertEquals(8.5, dto.getVersions().get("1.1.0").getQps());
+    }
+
+    @Test
+    @DisplayName("治理指标总览接口应返回 ling 摘要与版本明细")
+    void getAllLingGovernanceMetricsShouldReturnSummaryAndVersions() {
+        DashboardService dashboardService = mock(DashboardService.class);
+        MetricsCollector metricsCollector = mock(MetricsCollector.class);
+        GovernanceMetricsCollector governanceMetricsCollector = mock(GovernanceMetricsCollector.class);
+        LingFrameConfig config = mock(LingFrameConfig.class);
+        LingController controller = new LingController(config, dashboardService, metricsCollector, governanceMetricsCollector, false);
+
+        GovernanceMetricsSnapshot summary = new GovernanceMetricsSnapshot();
+        summary.setLingId("ling1");
+        summary.setRateLimitedRequests(3);
+
+        GovernanceMetricsSnapshot stable = new GovernanceMetricsSnapshot();
+        stable.setLingId("ling1");
+        stable.setVersion("1.0.0");
+        stable.setRateLimitedRequests(1);
+
+        GovernanceMetricsSnapshot canary = new GovernanceMetricsSnapshot();
+        canary.setLingId("ling1");
+        canary.setVersion("1.1.0");
+        canary.setTimeoutRequests(2);
+
+        Map<String, GovernanceMetricsSnapshot> versions = new LinkedHashMap<>();
+        versions.put("1.0.0", stable);
+        versions.put("1.1.0", canary);
+
+        when(governanceMetricsCollector.getAllSummaries()).thenReturn(Collections.singletonMap("ling1", summary));
+        when(governanceMetricsCollector.getVersionSnapshots("ling1")).thenReturn(versions);
+
+        ApiResponse<Map<String, LingGovernanceMetricsViewDTO>> response = controller.getAllLingGovernanceMetrics();
+
+        assertTrue(response.isSuccess());
+        assertNotNull(response.getData());
+        LingGovernanceMetricsViewDTO dto = response.getData().get("ling1");
+        assertNotNull(dto);
+        assertEquals(3, dto.getSummary().getRateLimitedRequests());
+        assertEquals(2, dto.getVersions().get("1.1.0").getTimeoutRequests());
     }
 }
